--- a/values.yaml
+++ b/values.yaml
@@ -1,7 +1,7 @@
 expose:
   # Set how to expose the service. Set the type as "ingress", "clusterIP", "nodePort" or "loadBalancer"
   # and fill the information in the corresponding section
-  type: ingress
+  type: clusterIP
   tls:
     # Enable TLS or not.
     # Delete the "ssl-redirect" annotations in "expose.ingress.annotations" when TLS is disabled and "expose.type" is "ingress"
@@ -124,7 +124,7 @@ expose:
 # the IP address of k8s node
 #
 # If Harbor is deployed behind the proxy, set it as the URL of proxy
-externalURL: https://core.harbor.domain
+externalURL: https://packages.fiacloud.io
 
 # The internal TLS used for harbor components secure communicating. In order to enable https
 # in each components tls cert files need to provided in advance.
@@ -209,16 +209,16 @@ persistence:
       # Specify the "storageClass" used to provision the volume. Or the default
       # StorageClass will be used (the default).
       # Set it to "-" to disable dynamic provisioning
-      storageClass: ""
-      subPath: ""
+      storageClass: fiak8spv03
+      subPath: /packages
       accessMode: ReadWriteOnce
-      size: 5Gi
+      size: 50Gi
       annotations: {}
     jobservice:
       jobLog:
         existingClaim: ""
-        storageClass: ""
-        subPath: ""
+        storageClass: fiak8spv03
+        subPath: /packages
         accessMode: ReadWriteOnce
         size: 1Gi
         annotations: {}
@@ -226,8 +226,8 @@ persistence:
     # be ignored
     database:
       existingClaim: ""
-      storageClass: ""
-      subPath: ""
+      storageClass: fiak8spv03
+      subPath: /packages
       accessMode: ReadWriteOnce
       size: 1Gi
       annotations: {}
@@ -235,15 +235,15 @@ persistence:
     # be ignored
     redis:
       existingClaim: ""
-      storageClass: ""
-      subPath: ""
+      storageClass: fiak8spv03
+      subPath: /packages
       accessMode: ReadWriteOnce
       size: 1Gi
       annotations: {}
     trivy:
       existingClaim: ""
-      storageClass: ""
-      subPath: ""
+      storageClass: fiak8spv03
+      subPath: /packages
       accessMode: ReadWriteOnce
       size: 5Gi
       annotations: {}
